microservices/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onetime
  labels:
    name: onetime
    app.kubernetes.io/name: onetime
    app.kubernetes.io/part-of: onetime-platform
